# forecast-segmentation

./: .gitignore  CLI_USAGE.md  README.md  app.py  cli.py  default.code-workspace  example_usage.py  forecast.ipynb  grid_search.py  main.py  pyproject.toml  run_backtest.py  run_grid_search.py  segmentation.sql  streamlit_requirements.txt
dataset/: README.md  feature_df.csv  generate_sample_data.py
example_configs/: forecasting_config.json  segmentation_config.json
outputs/: backtest_results.json
scripts/: README.md  auto_config.json  auto_forecast_compare.py  run_auto_forecast.sh
src/: cli.py  snowflake.py  splitter.py
src/config/: __init__.py  segmentation.py  source.py
src/data/: timeseries.py
src/features/: __init__.py  config.py  feature_pipeline.py
src/forecast/: config.py  evaluate.py  pipeline.py  segmented.py
src/forecast/models/: __init__.py  arima.py  base.py  moving_average.py  null.py  utils.py
src/grid_search/: __init__.py  backtest.py  config.py  core.py  evaluation.py  io.py  main.py  utils.py
src/new_forecast/: __init__.py  evaluate.py  models.py  segmented.py
src/segmentation/: config.py  pandas_classification.py  pipeline.py
src/streamlit/: __init__.py  app.py  data_utils.py  human_labels.json  sample_data.pkl
src/transformations/: amount_clipping.py  base_preparation.py  config.py  eom_pattern_classification.py  final_output.py  general_pattern_classification.py  importance_classification.py  monthly_aggregation.py  pattern_metrics.py  pipeline.py  portfolio_metrics.py  rolling_features.py  sql_data_preparation.py
(+35 files in other folders)
